--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ body, html, #__next, .site {
   background: white;
   width: 100vw;
   max-width:100%;
-  overflow: hidden,
+  overflow-x: hidden;
 }
 
 *, *:before, *:after {
@@ -33,13 +33,21 @@ strong {
   height: 100%;
   background-image: url('/static/background.png'); 
   background-size: cover; 
-  background-position: top;
+  background-position: top center;
   background-repeat: no-repeat;
   display: grid;
   grid-template-rows: 15% 39% 46%;
   justify-items: center;
   padding-top: 5%;
 }
+
+
+@media (max-width: 760px) {
+  .splash-background {
+    background-image: url('/static/background_mobile.png'); 
+  }
+}
+
 
 .logo{
   width: 265px;
@@ -48,49 +56,54 @@ strong {
 
 .splash-heading {
   max-width:940px;
+  width: 90%;
   padding: 20px;
   font-size: 42px;
   text-transform: uppercase;
   text-align: center;
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 64px;
   letter-spacing: 1px;
   color: white;
   font-weight: 300;
+  display: block;
+  margin: auto;
 }
 
-@media (max-width: 800px) {
+
+@media (max-width: 760px) {
   .splash-heading {
-    padding-left: 6%;
-padding-right: 6%;
+    font-size: 21px;
+    line-height: 30px;
+    letter-spacing: .55px;
 }
-
 }
-
 
 .splash-curve {
-  height: 100%;
+  height: auto;
   width: 100%;
   background-image: url('/static/curve.png'); 
   background-size: cover; 
-  background-position: top;
+  background-position: top center;
   background-repeat: no-repeat;
   display: grid;
   justify-items: center;
 }
 
-@media (max-width: 400px) {
-  .splash-curve{
-    width: 300px
+@media (max-width: 760px) {
+  .splash-curve {
+    background-image: url('/static/curve_mobile.png'); 
   }
 }
+
+
 
 
 .splash-sub-heading {
   max-width:940px;
   font-size: 26px;
   text-align: center;
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 30px;
   letter-spacing: .2px;
   color: white;
@@ -101,19 +114,32 @@ padding-right: 6%;
   padding-top: 5%;
   padding-bottom: 4%;
 }
+
 .splash-sub-heading-title{
-  padding-bottom: 2%;
-  
+  padding-bottom: 2%; 
 } 
+@media (max-width: 760px) {
+  .splash-sub-heading-title {
+    font-size: 17px;
+    line-height: 38px;
+  }
+}
+
+
 .splash-sub-heading-paragraph{
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   line-height: 28px;
-  padding-left: 2%;
-  padding-right: 2%;
-
-
+  padding-left: 4%;
+  padding-right: 4%;
 } 
+
+@media (max-width: 760px) {
+  .splash-sub-heading-paragraph {
+    font-size: 13px;
+    line-height: 20px;
+  }
+}
 
 
 
@@ -316,7 +342,7 @@ padding-right: 6%;
 @media (max-width: 800px) {
   .report-columns{
     grid-template-rows: auto auto;
-    grid-row-gap: 4%;
+    grid-row-gap: 2%;
     grid-template-columns: 1fr;
     grid-column-gap: 0%; 
 
@@ -326,7 +352,7 @@ padding-right: 6%;
 .report-rows{
   display: grid;
   grid-template-rows: auto auto;
-  grid-row-gap: 4%; 
+  grid-row-gap: 2%; 
 }
 
 
@@ -340,8 +366,14 @@ padding-right: 6%;
 }
 
 .vis-col{
-  width: 106%;
-  
+  width: 100%;
+  display: grid;
+  justify-items: center;
+}
+
+.victory-vis{
+  width: 112%;
+  transform: translate(1.5%);
 }
 
 .vis-row{
@@ -413,6 +445,16 @@ padding-right: 6%;
 }
 
 
+.responsive-map-img { 
+  max-width: 1000px;
+  width: 100%;
+  /* max-height: 548px; */
+  height: auto;
+  display: block;
+  margin: auto;
+  padding: 5%;
+}
+
 .report-text{
   text-align: left;
   font-family: 'Open Sans', sans-serif;
@@ -421,7 +463,7 @@ padding-right: 6%;
 .heading{
   font-size: 42px;
   text-transform: uppercase;
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #2FD89F;
   font-weight: 300;
   margin-top: 4px;
@@ -445,7 +487,7 @@ padding-right: 6%;
 
 .sub-heading{
   font-size: 28px; 
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 
@@ -501,7 +543,7 @@ padding-right: 6%;
   width: 118px;
   height: 30px;
   color:#4992D5;
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
   letter-spacing: .6px;
   cursor: pointer;
 
@@ -538,7 +580,7 @@ padding-right: 6%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Leto', sans-serif;
+  font-family: 'Lato', sans-serif;
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -574,7 +616,7 @@ padding-right: 6%;
 }
 .blue-banner-img {
   background: url('/static/20_bluebar_01.png');
-  background-position: center;
+  background-position: right;
   background-size: cover;
 }
 
@@ -641,7 +683,7 @@ padding-right: 6%;
 .pie-vis-layout{
   height: 100%;
   display: grid;
-  grid-template-rows: 1fr .66fr;
+  grid-template-rows: .66fr .66fr;
 }
 
 
@@ -675,6 +717,8 @@ padding-right: 6%;
   .pie-vis-row-3 {
     grid-template-rows: 1fr 1fr 1fr ;
     grid-template-columns: 1fr;
+    padding-left: 0%;
+    padding-right: 0%;
   }
 
 }
@@ -701,6 +745,14 @@ padding-right: 6%;
   
 }
 
+
+@media (max-width: 750px) {
+  .pie-title-text {
+    font-size: 20px;
+  }
+  
+}
+
 .percent-vis-row {
   width: 100%;
   display: flex;
@@ -721,7 +773,7 @@ padding-right: 6%;
   color: #4992D5;
   text-align: center;
   height: auto;
-  width: 375px;
+  max-width: 375px;
   display: grid;
   grid-template-rows: 1fr 3fr;
   padding-top: 40px;
@@ -733,8 +785,8 @@ padding-right: 6%;
 }
 
 .percent-vis-percentages-container {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 
